fix chrome form alignment

--- a/style/style.css
+++ b/style/style.css
@@ -114,7 +114,7 @@ a {
 	width: 30px;
 }
 
-#customSizeDiv {
+#customSizeInput {
 	display: none;
 }
 
